compiler/testData/diagnostics/tests/multiplatform/enum/enumEntryWithBody.fir.kt
// MODULE: m1-common
// FILE: common.kt

expect enum class En {
    E1,
    <!EXPECTED_ENUM_ENTRY_WITH_BODY, EXPECTED_ENUM_ENTRY_WITH_BODY{METADATA}!>E2 {
        <!EXPECTED_DECLARATION_WITH_BODY, EXPECTED_DECLARATION_WITH_BODY{METADATA}!>fun foo()<!> = ""
    },<!>
    <!EXPECTED_ENUM_ENTRY_WITH_BODY, EXPECTED_ENUM_ENTRY_WITH_BODY{METADATA}!>E3 { };<!>
}
